<resources>
    <string name="app_name">LoginAppRegistrer</string>
    <!-- Strings related to login -->
    <string name="username">UserName</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="tittle_register">Porfavor ingrese los datos de Registro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Deposito">Detalle de Deposito:</string>
    <string name="Deposito_hint">Cantidad a depositar</string>
    <string name="Text_register">Porfavor ingrese los datos</string>
    <string name="cuenta">Cuenta o nombre de usuario</string>

    <string name="title_activity_login_fragment">LoginFragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="first_name">Enter first name</string>
    <string name="last_name">Enter last name</string>
    <string name="password">password</string>
    <string name="back_action">Back</string>
    <string name="aceptar">Ingresar</string>
    <string name="repeat_password">Confirm password</string>
    <string name="Saludo">TextView</string>
    <string name="deposito_button">Depositar</string>
    <string name="retirar_button">Retirar</string>
    <string name="welcome_message">Hello, %1$s</string>
    <string name="text_balance">Your Balance is: %1$d</string>
    <string name="text_button">Retirar.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">Ok</string>
    <string name="text_login">Bienvenido! Porfavor ingrese los datos</string>
    <string name="login">Login</string>

</resources>
